# bazel_pkg_config_test

./: .gitignore  README.md  update_commit_hash.sh
bzlmod_test/: MODULE.bazel  main.c
workspace_test/: BUILD  WORKSPACE
