module(name = "bzlmod_test", version = "0.0.1")

bazel_dep(name = "bazel_pkg_config", version = "master")

git_override(
    module_name = "bazel_pkg_config",
    remote = "https://github.com/Lmh-java/bazel_pkg_config.git",
    commit = "[COMMIT_HASH]",
)

pkg_config_extension = use_extension("@bazel_pkg_config//:pkg_config.bzl", "pkg_config_extension")
pkg_config_extension.package(
    name = "glib",
    pkg_name = "glib-2.0",
)

use_repo(pkg_config_extension, "glib")

